MAU_TESTS = \
./p4_14/test_config_164_stateful_deterministic_sampling.p4 \
./p4_14/test_config_219_modify_field_conditionally.p4 \
./p4_14/test_config_97_unrelated_tables.p4 \
./p4_14/test_config_234_ternary_valid.p4 \
./p4_14/test_config_239_use_egress_pkt_length.p4 \
./p4_14/test_config_70_tcam_with_128_bits_and_version.p4 \
./p4_14/test_config_214_full_stats.p4 \
./p4_14/test_config_122_tcam_range_6.p4 \
./p4_14/dileep8.p4 \
./p4_14/test_config_67_tcam_with_84_bits_low_nibble_no_version.p4 \
./p4_14/test_config_165_stateful_bfd_failure_detection.p4 \
./p4_14/test_config_236_stateful_read_bit.p4 \
./p4_14/test_config_62_tcam_with_48_bits_and_version.p4 \
./p4_14/test_config_152_stateful_simple_cntr.p4 \
./p4_14/test_config_178_hash_action.p4 \
./p4_14/test_config_45_action_data_immediate_param_and_constant.p4 \
./p4_14/test_config_129_various_exact_match_keys.p4 \
./p4_14/test_config_63_tcam_with_48_bits_and_no_version.p4 \
./p4_14/test_config_30_action_data_imm_param.p4 \
./p4_14/test_config_108_no_phae_0_case_wrong_condition.p4 \
./p4_14/test_config_171_stateful_conga.p4 \
./p4_14/ternary_match0.p4 \
./p4_14/test_config_98_multiple_control_flow.p4 \
./p4_14/dileep.p4 \
./p4_14/test_config_116_predication_with_condition.p4 \
./p4_14/test_config_147_subtract_primitive.p4 \
./p4_14/test_config_237_hash_action_17_bits.p4 \
./p4_14/test_config_132_meter_pre_color_4.p4 \
./p4_14/test_config_4_modify_field.p4 \
./p4_14/test_config_185_first_lpf.p4 \
./p4_14/test_config_151_action_bus_allocation_2.p4 \
./p4_14/test_config_104_no_phase_0_case_egress_table.p4 \
./p4_14/test_config_17_action_packing_wide_with_pad.p4 \
./p4_14/test_config_115_hash_parity_groups.p4 \
./p4_14/test_config_157_random_number_generator.p4 \
./p4_14/test_config_47_action_data_big_constant_immediate.p4 \
./p4_14/test_config_2_action_data_table_sizing.p4 \
./p4_14/test_config_203_first_reduction_or.p4 \
./p4_14/test_config_162_add_header_init.p4 \
./p4_14/test_config_181_first_alg_tcam.p4 \
./p4_14/test_config_50_action_data_different_size_fields.p4 \
./p4_14/test_config_85_table_ordering.p4 \
./p4_14/test_config_150_action_bus_allocation.p4 \
./p4_14/test_config_59_tcam_with_44_bits_and_version.p4 \
./p4_14/test_config_109_no_phase_0_case_wrong_key.p4 \
./p4_14/test_config_201_meter_constant_index.p4 \
./p4_14/test_config_41_action_data_remove_header.p4 \
./p4_14/test_config_188_action_data_overflow.p4 \
./p4_14/test_config_144_recirculate.p4 \
./p4_14/test_config_37_action_data_field_field.p4 \
./p4_14/test_config_96_hash_data.p4 \
./p4_14/test_config_176_extend_crc16.p4 \
./p4_14/test_config_202_write_same_byte.p4 \
./p4_14/instruct1.p4 \
./p4_14/test_config_146_two_drops.p4 \
./p4_14/dileep10.p4 \
./p4_14/dileep3.p4 \
./p4_14/test_config_93_push_and_pop.p4 \
./p4_14/test_config_76_tcam_with_176_bits_and_version.p4 \
./p4_14/test_config_191_invalidate.p4 \
./p4_14/test_config_235_funnel_shift.p4 \
./p4_14/test_config_210_exclusive_conditions.p4 \
./p4_14/debug_issue_3_7_way_table.p4 \
./p4_14/test_config_154_stateful_sampling.p4 \
./p4_14/test_config_89_testing_action_data_allocation_3_with_partial_ram.p4 \
./p4_14/test_config_6_sram_and_tcam_allocation.p4 \
./p4_14/test_config_189_stat_with_lrt.p4 \
./p4_14/test_config_143_packing_constants.p4 \
./p4_14/test_config_123_meter_2.p4 \
./p4_14/test_config_39_action_data_add_to_field.p4 \
./p4_14/test_config_95_first_meter_table.p4 \
./p4_14/test_config_14_auto_immediate_action_data.p4 \
./p4_14/test_config_170_stateful_selection_table_update.p4 \
./p4_14/test_config_110_no_phase_0_case_wrong_match_type.p4 \
./p4_14/test_config_139_tcam_error_detection_4.p4 \
./p4_14/test_config_224_stateful_error_check.p4 \
./p4_14/test_config_121_tcam_range_5.p4 \
./p4_14/test_config_142_stateful_bfd.p4 \
./p4_14/test_config_190_modify_with_expr.p4 \
./p4_14/test_config_199_stateful_constant_index.p4 \
./p4_14/test_config_81_indirect_action_data_default.p4 \
./p4_14/test_config_186_hlir_modify.p4 \
./p4_14/test_config_57_tcam_with_44_bits_no_version.p4 \
./p4_14/test_config_161_new_primitives.p4 \
./p4_14/test_config_206_stateful_logging.p4 \
./p4_14/test_config_40_action_data_bit_xor.p4 \
./p4_14/test_config_127_meter_pre_color_3.p4 \
./p4_14/test_config_198_shared_action_profile.p4 \
./p4_14/test_config_192_stateful_driven_by_hash.p4 \
./p4_14/test_config_246_fill_stage.p4 \
./p4_14/test_config_118_tcam_range_2.p4 \
./p4_14/test_config_244_gateway_compare.p4 \
./p4_14/test_config_64_tcam_with_84_bits_high_nibble_and_version.p4 \
./p4_14/test_config_82_param_sharing.p4 \
./p4_14/test_config_77_tcam_with_216_bits_and_version.p4 \
./p4_14/dileep2.p4 \
./p4_14/test_config_128_table_placement_bug.p4 \
./p4_14/test_config_106_no_phase_0_case_not_first_table.p4 \
./p4_14/test_config_72_tcam_with_172_bits_high_nibble_and_version.p4 \
./p4_14/test_config_34_action_data_1_bit_params.p4 \
./p4_14/test_config_207_not_gateway.p4 \
./p4_14/test_config_100_hash_action.p4 \
./p4_14/test_config_114_simple_drop.p4 \
./p4_14/test_config_9_no_ternary_indirection.p4 \
./p4_14/test_config_49_action_data_bit_masked_set_immediate.p4 \
./p4_14/test_config_141_first_stateful_conga.p4 \
./p4_14/test_config_168_meter_bug.p4 \
./p4_14/test_config_18_first_bit_xor.p4 \
./p4_14/test_config_75_tcam_with_176_bits_no_version.p4 \
./p4_14/test_config_149_signed_and_saturating_add_sub.p4 \
./p4_14/test_config_46_action_data_big_constant.p4 \
./p4_14/debug_issue_1_invalid_action_pack_format.p4 \
./p4_14/test_config_195_stateful_predicate_output.p4 \
./p4_14/test_config_138_tcam_error_detection_3.p4 \
./p4_14/test_config_200_counter_constant_index.p4 \
./p4_14/test_config_180_first_proxy_hash.p4 \
./p4_14/test_config_92_bit_xor_10_bits.p4 \
./p4_14/test_config_155_stateful_3_alus.p4 \
./p4_14/test_config_131_placement_with_pragma.p4 \
./p4_14/test_config_205_modify_field_from_hash.p4 \
./p4_14/test_config_241_dv_example.p4 \
./p4_14/test_config_58_tcam_with_40_bits.p4 \
./p4_14/test_config_35_action_data_1_bit_params_and_imms.p4 \
./p4_14/test_config_231_subtract_from_field_swap.p4 \
./p4_14/test_config_166_stateful_generic_counter.p4 \
./p4_14/test_config_26_direct_add_primitive.p4 \
./p4_14/debug_issue_4_small_exact_match_key.p4 \
./p4_14/test_config_215_nondphv.p4 \
./p4_14/test_config_208_table_no_key.p4 \
./p4_14/test_config_167_stateful_flowlet_switching.p4 \
./p4_14/test_config_11_simple_gateway_table.p4 \
./p4_14/test_config_90_testing_action_data_allocation_3_with_fields_in_overhead.p4 \
./p4_14/test_config_238_simple_action_dep.p4 \
./p4_14/vk_basic_ipv4_subset.p4 \
./p4_14/test_config_25_no_reads_for_table.p4 \
./p4_14/basic_ipv4_selection.p4 \
./p4_14/test_config_216_phv_aff.p4 \
./p4_14/test_config_38_action_data_field_same_container.p4 \
./p4_14/test_config_156_indirect_stateful_cntr.p4 \
./p4_14/test_config_209_pack_hash_dist.p4 \
./p4_14/test_config_15_wide_key.p4 \
./p4_14/test_config_103_first_phase_0.p4 \
./p4_14/test_config_84_simple_wide_exact_match.p4 \
./p4_14/selector1.p4 \
./p4_14/case1770.p4 \
./p4_14/test_config_52_copy_header.p4 \
./p4_14/test_config_197_default_next_table.p4 \
./p4_14/test_config_135_tcam_range_7.p4 \
./p4_14/test_config_126_meter_pre_color_2.p4 \
./p4_14/test_config_64_tcam_with_84_bits_and_version.p4 \
./p4_14/test_config_1_ternary_match_crossbar.p4 \
./p4_14/test_config_79_tcam_with_220_bits_high_nibble_no_version.p4 \
./p4_14/dileep12.p4 \
./p4_14/test_config_68_tcam_with_88_bits_and_version.p4 \
./p4_14/test_config_153_stateful_simple_cntr_with_output.p4 \
./p4_14/vk_basic_ipv4_20150706.p4 \
./p4_14/test_config_111_no_phase_0_case_two_actions.p4 \
./p4_14/test_config_211_nested_field_list.p4 \
./p4_14/test_config_42_action_data_add_header.p4 \
./p4_14/test_config_184_stateful_bug1.p4 \
./p4_14/test_config_48_action_data_bit_masked_set.p4 \
./p4_14/dileep11.p4 \
./p4_14/test_config_112_no_phase_0_case_action_width_too_big.p4 \
./p4_14/test_config_159_stateful_using_phv_field.p4 \
./p4_14/test_config_102_clone.p4 \
./p4_14/test_config_160_stateful_single_bit_mode.p4 \
./p4_14/test_config_217_gateway_non_determin.p4 \
./p4_14/test_config_13_first_selection.p4 \
./p4_14/test_config_212_many_em.p4 \
./p4_14/test_config_107_no_phase_0_case_no_condition.p4 \
./p4_14/test_config_88_testing_action_data_allocation_3.p4 \
./p4_14/test_config_24_action_entries_pragma.p4 \
./p4_14/test_config_32_action_data_imm_param_imm.p4 \
./p4_14/test_config_179_check_if_sequential_action_used.p4 \
./p4_14/test_config_105_no_phase_0_case_has_side_effect.p4 \
./p4_14/test_config_196_hit_miss.p4 \
./p4_14/test_config_187_proxy_hash_2.p4 \
./p4_14/test_config_66_tcam_with_84_bits_high_nibble_no_version.p4 \
./p4_14/test_config_140_table_counter.p4 \
./p4_14/test_7_storm_control.p4 \
./p4_14/test_config_31_action_data_imm_imm.p4 \
./p4_14/test_config_218_simple_phv.p4 \
./p4_14/test_config_158_share_vliw.p4 \
./p4_14/test_config_99_share_exact_match_key.p4 \
./p4_14/test_config_51_action_data_same_parameter_used_multiple.p4 \
./p4_14/dileep4.p4 \
./p4_14/test_config_119_tcam_range_3.p4 \
./p4_14/test_config_no_phase_0_case_two_actions.p4 \
./p4_14/test_config_173_stateful_bloom_filter.p4 \
./p4_14/test_config_247_first_clpm.p4 \
./p4_14/test_config_16_action_packing_multi_entry_with_pad.p4 \
./p4_14/test_config_44_action_data_immediate.p4 \
./p4_14/test_config_73_tcam_with_172_bits_low_nibble_and_version.p4 \
./p4_14/test_config_194_same_action_param.p4 \
./p4_14/test_config_72_tcam_with_172_bits_and_version.p4 \
./p4_14/test_config_117_first_tcam_range.p4 \
./p4_14/test_config_124_meter_3.p4 \
./p4_14/dileep7-b.p4 \
./p4_14/test_config_204_no_tables_in_stage0.p4 \
./p4_14/test_config_125_meter_pre_color.p4 \
./p4_14/test_config_53_ternary_swizzle.p4 \
./p4_14/test_config_23_same_container_modified.p4 \
./p4_14/test_config_220_first_alpm.p4 \
./p4_14/test_config_213_many_alg_tcam.p4 \
./p4_14/test_config_183_sample_e2e.p4 \
./p4_14/test_config_148_action_profile.p4 \
./p4_14/test_config_240_simple_deps.p4 \
./p4_14/test_config_33_action_data_paramx3.p4 \
./p4_14/test_config_86_multiple_action_widths_for_indirect_action.p4 \
./p4_14/test_config_12_no_overhead.p4 \
./p4_14/test_config_134_stage_deps.p4 \
./p4_14/test_config_60_tcam_with_44_and_no_version_high_nibble.p4 \
./p4_14/test_config_83_no_immediate_when_indirect_action_table.p4 \
./p4_14/test_config_163_stateful_table_math_unit.p4 \
./p4_14/test_config_78_tcam_with_220_bits_high_nibble_and_version.p4 \
./p4_14/test_config_21_tcam_vpns.p4 \
./p4_14/do_nothing.p4 \
./p4_14/test_config_177_meter_test.p4 \
./p4_14/test_config_120_tcam_range_4.p4 \
./p4_14/test_config_74_tcam_with_172_bits_low_nibble_no_version.p4 \
./p4_14/test_config_175_match_table_with_no_key.p4 \
./p4_14/test_config_169_stateful_sflow_sequence.p4 \
./p4_14/test_config_69_tcam_with_88_bits_no_version.p4 \
./p4_14/test_config_87_share_parameter_for_different_containers.p4 \
./p4_14/test_config_145_shift_primitives.p4 \
./p4_14/test_config_113_no_phase_0_case_sourced_from_field.p4 \
./p4_14/test_config_19_immediate_but_no_action_data_table.p4 \
./p4_14/test_config_20_table_dependencies.p4 \
./p4_14/test_config_172_stateful_heavy_hitter.p4 \
./p4_14/test_config_71_tcam_with_128_bits_and_no_version.p4 \
./p4_14/test_config_55_generate_digest.p4 \
./p4_14/test_config_10_new_crossbar_allocation.p4 \
./p4_14/test_config_137_tcam_error_detection_2.p4 \
./p4_14/test_config_130_test_default_action.p4 \
./p4_14/test_config_22_direct_mapped_exact.p4 \
./p4_14/test_config_182_warp_primitive.p4 \
./p4_14/test_config_193_indirect_stats_no_reads.p4 \
./p4_14/test_config_133_ternary_extra_byte.p4 \
./p4_14/test_config_91_gateway_with_split_table.p4 \
./p4_14/test_config_94_action_constant_alignment.p4 \
./p4_14/test_tp_1_one_table_spill.p4 \
./p4_14/test_config_61_tcam_with_44_bits_and_no_version_low_nibble.p4 \
./p4_14/test_config_136_tcam_error_detection.p4 \
./p4_14/test_config_174_stateful_flow_learning.p4 \
./p4_14/test_config_65_tcam_with_84_bits_low_nibble_and_version.p4 \
./p4_14/test_config_5_sram_allocation.p4 \
./p4_14/test_config_36_action_data_field_param.p4 \
./p4_14/test_config_250_all_tcam.p4 \
./p4_14/test_config_56_iterate_through_packing.p4 \
./p4_14/test_config_80_tcam_with_220_bits_low_nibble_no_version.p4 \
./p4_14/test_config_254_simple_exit.p4

MAU_XFAIL_TESTS = \
./p4_14/test_config_121_tcam_range_5.p4 \
./p4_14/test_config_141_first_stateful_conga.p4 \
./p4_14/test_config_142_stateful_bfd.p4 \
./p4_14/test_config_171_stateful_conga.p4 \
./p4_14/test_config_183_sample_e2e.p4 \
./p4_14/test_config_190_modify_with_expr.p4 \
./p4_14/case1770.p4

PHV_TESTS = \
./p4_14/test_config_232_phv_metadata_overlay.p4 \
./p4_14/test_config_248_pa_problem.p4 \
./p4_14/test_config_233_hlir_transform.p4 \
./p4_14/test_config_229_phv_promise_packing.p4 \
./p4_14/test_config_243_meta_assign.p4 \
./p4_14/test_config_223_simple_set_metadata.p4 \
./p4_14/test_config_225_phv_promise.p4 \
./p4_14/test_config_227_set_meta_packing.p4 \
./p4_14/test_config_245_alias_test.p4 \
./p4_14/test_config_226_parser_state_split.p4 \
./p4_14/test_config_230_phv_metadata_sharing.p4 \
./p4_14/test_config_228_set_meta_multiple_states.p4 \
./p4_14/test_config_221_small.p4 \
./p4_14/test_config_222_small_tag_stack.p4 \
./p4_14/test_config_242_hdr_stack.p4 \
./p4_14/test_config_251_elminate_pov.p4 \
./p4_14/test_config_249_simple_bridge.p4 \
./p4_14/test_config_252_pa_required_packing.p4 \
./p4_14/test_config_253_pa_problem_2.p4 \
./p4_14/test_config_255_pa_problem_3.p4 \
./p4_14/test_config_256_pa_problem_4.p4 \
./p4_14/test_config_257_pa_problem_5.p4 \
./p4_14/test_config_233_hlir_transform.p4

PARDE_TESTS = \
./p4_14/test_checksum.p4

PHV_XFAIL_TESTS = \
./p4_14/test_config_248_pa_problem.p4 \
./p4_14/test_config_252_pa_required_packing.p4 \
./p4_14/test_config_256_pa_problem_4.p4 \
./p4_14/test_config_257_pa_problem_5.p4

OTHER_TESTS = \
./p4_14/eth_addr_cmp.p4 \
./p4_14/exclusive_cf_multiple_actions.p4 \
./p4_14/exclusive_cf_one_action.p4

OTHER_XFAIL_TESTS = \
./p4_14/exclusive_cf_fail_next_ptr.p4 \
./p4_14/exclusive_cf_one_action_fail_after.p4 \
./p4_14/exclusive_cf_one_action_fail_before.p4

TESTS = $(MAU_TESTS) $(PHV_TESTS) $(PARDE_TESTS) $(OTHER_TESTS)
XFAIL_TESTS = $(MAU_XFAIL_TESTS) $(PHV_XFAIL_TESTS) $(OTHER_XFAIL_TESTS)

LOG_COMPILER = ./../p4c-tofino/p4c_tofino/full_shell.py

clean-local:
	-rm -rf *.tofino

superclean: clean distclean
	-rm -rf aclocal.m4 autom4te.cache/ configure install-sh Makefile.in missing test-driver

